tests/contract_testcases/polkadot/events/event_decl_11.sol
abstract contract c {
    event foo(bool x, uint32 y, address indexed);
}

// ---- Expect: diagnostics ----
// error: 2:33-48: indexed event fields must have a name on polkadot
